--- a/login/style/style.css
+++ b/login/style/style.css
@@ -12,22 +12,18 @@
   --colorPrimary: #3a68b7;
 }
 
-html {
-  background-color: var(--colorPrimary);
-  font-family: "Roboto", sans-serif;
-  color: #292828;
-}
-
 body {
+  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   margin: 0;
+  background-color: var(--colorPrimary);
 }
 
-form {
-  width: 50%;
+.form {
+  width: 80%;
   min-width: 28.125rem;
   max-width: 35rem;
   background-color: #fff;
@@ -35,79 +31,75 @@ form {
   padding: 1rem;
 }
 
-fieldset {
+.fieldset_form {
   border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
   padding: 1rem;
-  margin: 0;
 }
 
-label,
-input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-input {
-  border: 2px solid transparent;
-  border-bottom-color: #bbb;
-  padding: 0.75rem;
-  margin: 0.5rem 0 2.5rem;
-  outline: 0;
-}
-
-input:focus {
-  border: 1px solid var(--colorPrimary);
-  transform: translateX(0.5rem);
-}
-
-legend {
-  padding: 0.7rem 0;
-  color: var(--colorPrimary);
-  font-size: 1.8rem;
-}
-
-label {
-  text-transform: uppercase;
-  color: #6c6c6c;
+.form__label {
   font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
-.btn {
-  background-color: var(--colorPrimary);
-  color: white;
-  cursor: pointer;
-  padding: 0.6rem 0.6rem;
-  font-size: 1.2rem;
+.form__input {
   border: none;
-  text-transform: uppercase;
-  margin: 0;
+  border-bottom-color: #bbb;
+  padding: 0.5rem 0;
+  font-size: 1.2rem;
+  border-radius: 0;
+  border-bottom: 1px solid var(--colorPrimary);
+  margin-bottom: 0.8rem;
+  outline: none;
+  transition: padding-left 0.08s;
+}
+
+.form__input:focus {
+  outline: 2px solid var(--colorPrimary);
+  padding-left: 0.3rem;
+}
+
+.title_form {
+  color: var(--colorPrimary);
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 2rem 0 0;
 }
 
 .enviar {
   display: flex;
-  justify-content: space-between;
-  flex-grow: 1;
-  align-items: baseline;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-/*login*/
-
-.btn a {
-  text-decoration: none;
-  color: white;
-}
-
-.btn_novo {
-  background-color: transparent;
-  border: none;
+.btn {
   text-transform: uppercase;
-  font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  border: 3px;
+  border: none;
+  outline: none;
+  padding: 0.8rem 1.2rem;
+  text-decoration: none;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
   cursor: pointer;
 }
 
-.btn_novo a {
-  text-decoration: none;
+.btn__principal {
+  background-color: var(--colorPrimary);
+  color: #fff;
+}
+
+.btn__novo {
   color: var(--colorPrimary);
+}
+
+.action__form__aside {
+  text-decoration: none;
+  font-size: 0.85rem;
+  flex-grow: 1;
+  text-align: right;
 }
