--- a/login/style/style.css
+++ b/login/style/style.css
@@ -29,6 +29,7 @@ body {
   background-color: #fff;
   box-shadow: -8px 1px 3px #0b2758;
   padding: 1rem;
+  border-radius: 7px;
 }
 
 .fieldset_form {
@@ -57,6 +58,10 @@ body {
   transition: padding-left 0.08s;
 }
 
+.form__input::placeholder {
+  font-size: 0.8rem;
+}
+
 .form__input:focus {
   outline: 2px solid var(--colorPrimary);
   padding-left: 0.3rem;
@@ -73,6 +78,12 @@ body {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.rowReverse {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .btn {
@@ -91,6 +102,7 @@ body {
 .btn__principal {
   background-color: var(--colorPrimary);
   color: #fff;
+  border-radius: 4px;
 }
 
 .btn__novo {
@@ -100,6 +112,5 @@ body {
 .action__form__aside {
   text-decoration: none;
   font-size: 0.85rem;
-  flex-grow: 1;
   text-align: right;
 }
